# AR-HMM_behavior

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: data_sources.yaml  defaults.yaml
docs/: DECISIONS.md  DESIGN.md  FINDINGS.md
scripts/: analysis_noncircular.py  assemble_features.py  build_consensus_basis.py  build_design.py  characterize_rewiring.py  diagnose_lick_split.py  figure_ps46_recovery.py  figure_recovery_extended.py  fit_arhmm.py  rewiring_cohort.py  syllable_analysis.py
src/arhmm_behavior/: __init__.py  paths.py  task_events.py  treadmill.py
src/arhmm_behavior/dlc/: __init__.py  kinematics.py
src/arhmm_behavior/facerhythm/: __init__.py  alignment.py  consensus.py  io.py
src/arhmm_behavior/features/: __init__.py  assemble.py
src/arhmm_behavior/model/: __init__.py  arhmm.py  design.py  moseq.py  scoring.py
tests/: test_consensus.py
